# chatgpt_evtx_reader_plugin

./: .gitignore  README.md  ai-plugin.json  openapi.yaml  pyproject.toml
app/: main.py
app/api/v1/endpoints/evtx_parser/: evtx_parser.py
app/config/: configuration.py  instances.py
app/services/evtx_parser/: evtx_parser.py
